tests/duarouter/alternatives/style2_input/errors/vehicle/vehicle_depart_missing/errors.duarouter
Error: Attribute 'depart' is missing in definition of vehicle '1'.
Quitting (on error).
